force-app/main/default/objects/ProjectInvoice__c/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BillTo Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Invoices</relationshipLabel>
    <relationshipName>Project_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>