force-app/main/default/objects/ProjectInvoice__c/fields/ChargeTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeTotalAmount__c</fullName>
    <label>Charge Total Amount</label>
    <summarizedField>ProjectInvoiceLineItem__c.ChargeTotalAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>