force-app/main/default/objects/ProjectInvoice__c/fields/CloneComment__c.field-meta.xml
<CustomField>
    <fullName>CloneComment__c</fullName>
    <description>Reason code comment</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>