force-app/main/default/objects/ProjectInvoice__c/fields/ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>ClonedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>ProjectInvoice__c</referenceTo>
    <relationshipLabel>Project Invoices (Cloned From)</relationshipLabel>
    <relationshipName>ClonedFrom</relationshipName>
    <type>Lookup</type>
</CustomField>