force-app/main/default/objects/ProjectInvoice__c/fields/CloneReasonCode__c.field-meta.xml
<CustomField>
    <fullName>CloneReasonCode__c</fullName>
    <label>CloneReasonCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed to load in Lawson</fullName>
            </value>
            <value>
                <fullName>Product Re-bill</fullName>
            </value>
            <value>
                <fullName>Labor Re-bill</fullName>
            </value>
            <value>
                <fullName>Wrong Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>