force-app/main/default/objects/ProjectInvoice__c/fields/CreditApplied__c.field-meta.xml
<CustomField>
    <fullName>CreditApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Applied</description>
    <inlineHelpText>Credit Applied</inlineHelpText>
    <label>Credit Applied</label>
    <type>Checkbox</type>
</CustomField>