force-app/main/default/objects/ProjectInvoice__c/fields/CreditTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditTotalAmount__c</fullName>
    <label>Credit Total Amount</label>
    <summarizedField>ProjectInvoiceLineItem__c.CreditTotalAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>