force-app/main/default/objects/ProjectInvoice__c/fields/ExternalInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalInvoiceNumber__c</fullName>
    <externalId>true</externalId>
    <label>External Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>