force-app/main/default/objects/ProjectInvoice__c/fields/GroupedProjectInvoice__c.field-meta.xml
<CustomField>
    <fullName>GroupedProjectInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouped Project Invoice</label>
    <referenceTo>ProjectInvoice__c</referenceTo>
    <relationshipLabel>Project Invoices</relationshipLabel>
    <relationshipName>Project_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>