force-app/main/default/objects/ProjectInvoice__c/fields/InvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBalance__c</fullName>
    <label>Invoice Balance</label>
    <summarizedField>ProjectInvoiceLineItem__c.TotalLineItemBalance__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>