force-app/main/default/objects/ProjectInvoice__c/fields/InvoiceContact__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Invoices (Invoice Contact)</relationshipLabel>
    <relationshipName>Project_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>