force-app/main/default/objects/ProjectInvoice__c/fields/IsGroupedInvoice__c.field-meta.xml
<CustomField>
    <fullName>IsGroupedInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Grouped Invoice</label>
    <type>Checkbox</type>
</CustomField>