force-app/main/default/objects/ProjectInvoice__c/fields/LawsonAccountAddressId__c.field-meta.xml
<CustomField>
    <fullName>LawsonAccountAddressId__c</fullName>
    <formula>BillToContact__r.AccountAddressId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawson Account Address Id</label>
    <type>Text</type>
</CustomField>