force-app/main/default/objects/ProjectInvoice__c/fields/LawsonAccountId__c.field-meta.xml
<CustomField>
    <fullName>LawsonAccountId__c</fullName>
    <formula>Account__r.CMKOneHubAccountID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawson Account Id</label>
    <type>Text</type>
</CustomField>