force-app/main/default/objects/ProjectInvoice__c/fields/LawsonCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>LawsonCompanyCode__c</fullName>
    <label>Lawson Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>