force-app/main/default/objects/ProjectInvoice__c/fields/LawsonHeader1__c.field-meta.xml
<CustomField>
    <fullName>LawsonHeader1__c</fullName>
    <label>Lawson Header 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>