force-app/main/default/objects/ProjectInvoice__c/fields/LawsonHeader2__c.field-meta.xml
<CustomField>
    <fullName>LawsonHeader2__c</fullName>
    <label>Lawson Header 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>