force-app/main/default/objects/ProjectInvoice__c/fields/LawsonHeader3__c.field-meta.xml
<CustomField>
    <fullName>LawsonHeader3__c</fullName>
    <label>Lawson Header 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>