force-app/main/default/objects/ProjectInvoice__c/fields/LawsonInvoiceType__c.field-meta.xml
<CustomField>
    <fullName>LawsonInvoiceType__c</fullName>
    <label>Lawson Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>