force-app/main/default/objects/ProjectInvoice__c/fields/LawsonPrefix__c.field-meta.xml
<CustomField>
    <fullName>LawsonPrefix__c</fullName>
    <label>Lawson Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>