force-app/main/default/objects/ProjectInvoice__c/fields/LawsonProcessType__c.field-meta.xml
<CustomField>
    <fullName>LawsonProcessType__c</fullName>
    <label>Lawson Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
                <default>true</default>
                <label>PB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>