force-app/main/default/objects/ProjectInvoice__c/fields/NumberofLineItems__c.field-meta.xml
<CustomField>
    <fullName>NumberofLineItems__c</fullName>
    <label>Number of Line Items</label>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>