force-app/main/default/objects/ProjectInvoice__c/fields/PaymentTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentTotalAmount__c</fullName>
    <label>Payment Total Amount</label>
    <summarizedField>ProjectInvoiceLineItem__c.PaymentTotalAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>