force-app/main/default/objects/ProjectInvoice__c/fields/ProjectAccount__c.field-meta.xml
<CustomField>
    <fullName>ProjectAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Account</label>
    <referenceTo>ProjectAccount__c</referenceTo>
    <relationshipLabel>Project Invoices</relationshipLabel>
    <relationshipName>Project_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>