force-app/main/default/objects/ProjectInvoice__c/fields/ReservationDate__c.field-meta.xml
<CustomField>
    <fullName>ReservationDate__c</fullName>
    <formula>Project__r.Reservation__r.RequestedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Date</label>
    <type>Date</type>
</CustomField>