force-app/main/default/objects/ProjectInvoice__c/fields/ResponsibleParty__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Party</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Invoices (Responsible Party)</relationshipLabel>
    <relationshipName>Project_Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>