force-app/main/default/objects/ProjectInvoice__c/fields/SalespersonEmployeeID__c.field-meta.xml
<CustomField>
    <fullName>SalespersonEmployeeID__c</fullName>
    <formula>ProjectAccount__r.Opportunity__r.Owner.FirstName + &#39; &#39; + ProjectAccount__r.Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson Employee ID</label>
    <type>Text</type>
</CustomField>