force-app/main/default/objects/ProjectInvoice__c/fields/TotalInvoiceAmountCalculated__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceAmountCalculated__c</fullName>
    <description>Deprecated</description>
    <label>Deprecated Total Invoice Amount Cal</label>
    <summarizedField>ProjectInvoiceLineItem__c.AmountCalculated__c</summarizedField>
    <summaryFilterItems>
        <field>ProjectInvoiceLineItem__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>