force-app/main/default/objects/ProjectInvoice__c/fields/TotalProjectInvoiceAmountCalculated__c.field-meta.xml
<CustomField>
    <fullName>TotalProjectInvoiceAmountCalculated__c</fullName>
    <label>Total Invoice Amount Calculated</label>
    <summarizedField>ProjectInvoiceLineItem__c.TotalLineItemAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>