force-app/main/default/objects/ProjectInvoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>PreBill</fullName>
                <label>Pre Bill</label>
            </value>
            <value>
                <fullName>PostExecution</fullName>
                <label>Post Execution</label>
            </value>
            <value>
                <fullName>Reconcile</fullName>
            </value>
            <value>
                <fullName>Unreconciled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>